<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/grass_repeat"
    tools:ignore="Overdraw"
    tools:context=".fragment.MainMenuFragment">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:icon="@drawable/icon_continue"
        android:text="@string/continue_game"
        tools:visibility="visible"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:icon="@drawable/icon_play"
        android:text="@string/new_game"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/icon_help"
        android:text="@string/help"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/icon_settings"
        android:text="@string/settings"/>
</LinearLayout>
