<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.starsep.sokoban.MainMenuActivity">

        <Button
            android:id="@+id/continueGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/icon_continue"
            android:drawableStart="@drawable/icon_continue"
            android:onClick="continueGameButtonClicked"
            android:text="@string/continue_game"
            android:visibility="gone"/>

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/icon_play"
            android:drawableStart="@drawable/icon_play"
            android:onClick="newGameButtonClicked"
            android:text="@string/new_game"/>

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_help"
            android:drawableStart="@drawable/icon_help"
            android:text="@string/help"
            android:onClick="helpButtonClicked"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_settings"
            android:drawableStart="@drawable/icon_settings"
            android:text="@string/settings"
            android:onClick="settingsButtonClicked"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="right"
            android:visibility="gone"/>

</LinearLayout>
