<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grass_repeat"
    tools:context=".fragment.GameFragment"
    tools:ignore="Overdraw">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/undoButton"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/undo"
        app:icon="@drawable/icon_undo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetButton"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        app:icon="@drawable/icon_reset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <!--
    app:layout_constraintRight_toLeftOf="@id/settingsButton"
    app:layout_constraintLeft_toRightOf="@id/undoButton"
    -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        android:focusable="false"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/settings"
        app:icon="@drawable/icon_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/statusTextView"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.starsep.sokoban.release.view.GameView
        android:id="@+id/gameView"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/statusTextView"
        app:layout_constraintBottom_toTopOf="@id/statusTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
